--- a/src-tauri/app-main/tauri.conf.json.handlebars
+++ b/src-tauri/app-main/tauri.conf.json.handlebars
@@ -14,6 +14,7 @@
         "fullscreen": false,
         "resizable": true,
         "title": "Kabegame",
+        "devtools": false,
         {{#if isWindows}}
         "transparent": true,
         "width": 1200,
